# netsuite-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.flox/: env.json
.flox/env/: manifest.toml
app/: asgi.py  main.py  types.py
app/api/: __init__.py  auth_demo.py  auth_dependencies.py  dependencies.py  exception_handlers.py  health.py
app/api/middleware/: __init__.py  auth.py  logging.py
app/core/: __init__.py  auth_config.py  config.py  constants.py  exceptions.py  logging.py
app/models/: __init__.py  health.py  query_params.py
app/services/: __init__.py  protocols.py
app/services/netsuite/: __init__.py  auth.py  base.py
app/services/netsuite/restlet/: __init__.py  client.py
app/services/netsuite/soap/: __init__.py  client.py
app/utils/: __init__.py  query_parser.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATETIME_HANDLING.md  GETTING_STARTED.md  LOGGING.md  PYDANTIC_GUIDE.md  README.md  TESTING.md  TYPES.md
tests/: conftest.py
tests/unit/: test_auth_middleware.py  test_config.py  test_exception_handling.py  test_exceptions.py  test_health.py  test_logging.py  test_logging_context.py  test_middleware.py  test_middleware_ordering.py  test_netsuite_auth.py  test_netsuite_restlet_client.py  test_netsuite_soap_client.py  test_query_params.py  test_query_parser.py
